@@ -237,3 +237,17 @@ default_pick_uncertainty = 0.05
 [matplotlibrc]
 lines.linewidth = 1.0
 font.size = 10
+
+[ar_picker]
+# for meaning of parameters, see obspy documentation for routine
+# obspy.signal.trigger.ar_pick
+f1 = 1.0
+f2 = 20.0
+lta_p = 1.0
+sta_p = 0.1
+lta_s = 4.0
+sta_s = 1.0
+m_p = 2
+m_s = 8
+l_p = 0.1
+l_s = 0.2
